--- a/views/server/processList.html
+++ b/views/server/processList.html
@@ -9,7 +9,7 @@
 
       <div class="am-g am-g-fixed am-margin-top">
         <div class="am-panel am-panel-default">
-        <div class="am-panel-hd am-cf me-panel-header" data-am-collapse="{target: '#processList-info'}">进程 (db.$cmd.sys.inprog.find({$all:1})) <span class="am-icon-chevron-down am-fr" ></span></div>
+        <div class="am-panel-hd am-cf me-panel-header" data-am-collapse="{target: '#processList-info'}">进程 (db.adminCommand( { currentOp: 1, "$all": 1 } )) <span class="am-icon-chevron-down am-fr" ></span></div>
           <div id="processList-info" class="am-in">
             <table class="am-table am-table-bd am-table-bdrs am-table-striped am-table-hover">
             <thead>
@@ -17,16 +17,24 @@
                 <th>Description</th>
                 <th>Client  </th>
                 <th>Active</th>
-                <th>LockType</th>
                 <th>Waiting </th>
                 <th>SecsRunning</th>
                 <th>Operation</th>
                 <th>NameSpace</th>
             </thead>
               <tbody>
+                {{ range $process := .ProcessList }}
                 <tr>
-
+                  <td>{{ $process.opid }}</td>
+                  <td>{{ $process.desc }}</td>
+                  <td>{{ $process.client }}</td>
+                  <td>{{ $process.active }}</td>
+                  <td>{{ $process.waitingForLock }}</td>
+                  <td>{{ $process.secs_running }}</td>
+                  <td>{{ $process.op }}</td>
+                  <td>{{ $process.ns }}</td>
                 </tr>
+                {{ end }}
               </tbody>
             </table>
           </div>
