--- a/views/server/command.html
+++ b/views/server/command.html
@@ -3,47 +3,66 @@
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
 {{set . "active" "command"}}
-  <div class="admin-content">
+  <div class="admin-content" id="command">
   {{template "Tpl/navigation" .}}
-
-
       <div class="am-g am-g-fixed am-margin-top">
           <div >
-              <a href=""><i class="am-icon-angle-double-right"></i>&nbsp;&nbsp; List of database commands</a>
+              <a href="http://docs.mongodb.org/manual/reference/command/" target="_blank" ><i class="am-icon-angle-double-right"></i>&nbsp;&nbsp; List of database commands</a>
           </div>
-          <form class="am-form">
+          <div class="am-form">
               <fieldset>
                   <div class="am-form-group">
-                      <textarea class="" rows="5" id="doc-ta-1"></textarea>
+                      <textarea class="" rows="5" id="doc-ta-1" v-model="item.command" ></textarea>
                   </div>
                   <div class="am-form-group">
                        <label for="Database">Database:</label>
-                       <select id="Database">
-                         <option value="option1">Admin</option>
-                         <option value="option2">Admin</option>
-                         <option value="option3">Admin</option>
+                       <select id="Database" v-model="item.dbName">
+                         {{ range $db := .DBNames }}
+                          <option value="{{ $db }}"> {{ $db }} </option>
+                        {{ end }}
                        </select>
                        <span class="am-form-caret"></span>
                  </div>
+                   
                  <div class="am-form-group">
                       <label for="Format">Format:</label>
-                      <select id="Format">
+                      <select id="Format" v-model="item.format">
                         <option value="json">JSON</option>
-                        <option value="array">Array</option>
+                       <!--  <option value="array">Array</option> -->
+
                       </select>
                       <span class="am-form-caret"></span>
                     </div>
+                  <div class="am-alert a am-alert-warning" id = "msg_alert" v-show="has_msg" style="display: none" >
+                    <button type="button" v-on:click="has_msg = false" class="am-close" >&times;</button>
+                    <p> ${ alert_msg } </p>
+                  </div>
                     <div class="am-form-group">
-                        <button type="button" class="am-btn am-btn-default am-btn-block">执行代码</button>
+                        <button type="button" class="am-btn am-btn-default am-btn-block" v-on:click="execAction" >执行代码</button>
                     </div>
                 </fieldset>
-          </form>
+          </div>
 
         </div>
-    </div>
-</div>
-  {{template "Tpl/footer" .}}
+        <div class="am-g am-g-fixed am-margin-top">
+          <fieldset>
+            <div class="me-result-panel am-panel am-panel-default" v-show="show_result" style="display: none">
+                  <div class="me-result-panel am-panel am-panel-default" >
+                    <div class="am-panel-hd">${ item.command }</div>
+                    <div class="am-panel-bd">
+                      <pre>${ result | json}</code></pre>
+                    </div>
+                  </div>
+              </div>
+            </fieldset>
+        </div>
 
-  </body>
-  </html>
+  </div>
+</div>
+{{template "Tpl/footer" .}}
+<script type="text/javascript" src="/public/js/vue.js"></script>
+<script type="text/javascript" src="/public/js/vue-resource.js"></script>
+<script type="text/javascript" src="/public/js/server/command.js" ></script>
+</body>
+</html>
 {{end}}
