--- a/views/db/home.html
+++ b/views/db/home.html
@@ -24,27 +24,12 @@
                    <td>Is Empty?</td>
                    <td>No</td>
                  </tr>
-                 <tr>
-                   <td>Collections</td>
-                   <td> 1 collections:
-                        startup_log </td>
-                 </tr>
-                 <tr>
-                   <td>Objects</td>
-                   <td> 19 </td>
-                 </tr>
-                 <tr>
-                   <td>Objects</td>
-                   <td> 19 </td>
-                 </tr>
-                 <tr>
-                   <td>Objects</td>
-                   <td> 19 </td>
-                 </tr>
-                 <tr>
-                   <td>Objects</td>
-                   <td> 19 </td>
-                 </tr>
+                {{ range $key, $value := .DBStats }}
+                   <tr>
+                     <td>{{ $key }}</td>
+                     <td>{{ $value }}</td>
+                   </tr>
+                {{ end }}
                </tbody>
              </table>
            </div>
@@ -55,7 +40,7 @@
 </div>
 
 {{template "Tpl/footer" .}}
-
+<!-- <script type="text/javascript" src="/public/js/db/db.js"></script> -->
 </body>
 </html>
 {{end}}
