add db create collection

--- a/views/db/home.html
+++ b/views/db/home.html
@@ -3,6 +3,7 @@
 {{template "Tpl/headerSecond" .}}
 {{template "Tpl/sidebar" .}}
 
+{{set . "navigation" "统计" }}
 {{set . "active" "home" }}
 <!-- content start -->
 
