--- a/views/db/dbTransfer.html
+++ b/views/db/dbTransfer.html
@@ -28,15 +28,11 @@
 
               <hr>
               <div class="am-form-group">
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option1"> 选我
-                </label>
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option2"> 同时可以选我
-                </label>
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option3"> 还可以选我
-                </label>
+                {{ range $value := .CollectionNames }}
+                  <label class="am-checkbox-inline">
+                    <input type="checkbox" name="collection" value="{{ $value }}"> {{ $value }}
+                  </label>
+                {{ end }}
               </div>
           </div>
           <div>
@@ -45,39 +41,39 @@
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">Socket</label>
               <div class="am-u-sm-8 am-u-end" >
-                <input type="text" >
+                <input type="text" id="socket" >
               </div>
             </div>
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">Host</label>
               <div class="am-u-sm-8 am-u-end" >
-                <input type="text" >
+                <input type="text" id="host" >
               </div>
             </div>
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">Port</label>
               <div class="am-u-sm-8 am-u-end" >
-                <input type="text" value="27017">
+                <input type="text" value="27017" id="port">
               </div>
             </div>
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">Authenticate?</label>
               <div class="am-u-sm-8 am-u-end am-checkbox me-cap-cal-op-checkbox" >
                   <label>
-                      <input type="checkbox">
+                      <input type="checkbox" id="isAuth" >
                   </label>
                 </div>
             </div>
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">UserName</label>
               <div class="am-u-sm-8 am-u-end" >
-                <input type="text">
+                <input type="text" id="username">
               </div>
             </div>
             <div class="am-form-group">
               <label class="am-u-sm-2 am-form-label">PassWord</label>
               <div class="am-u-sm-8 am-u-end" >
-                <input type="password">
+                <input type="password" id="passWord" >
               </div>
             </div>
             </div>
@@ -88,13 +84,26 @@
                   <label class="am-u-sm-2 am-form-label">Copy Indexes?</label>
                     <div class="am-u-sm-8 am-u-end am-checkbox me-cap-cal-op-checkbox" >
                   <label>
-                    <input type="checkbox" checked="checked">
+                    <input type="checkbox" checked="checked" id="isCopyIndex" >
                   </label>
                 </div>
                 </div>
-            </div>
+                <div>
+                  <input type="text" value="{{.DBName}}" id="dnName" style="display: none;">
+                </div>
+            </div> 
+           
             <div>
               <strong><span>Confirm</span></strong>
+              <br>
+               <div class="am-alert a am-alert-warning" id = "msg_alert" style="display: none"  >
+                    <button type="button" class="am-close" >&times;</button>
+                    <p></p>
+                  </div>
+                  <div class="am-alert am-alert-success"  style="display: none" id="msg_success" >
+                    <button type="button"  class="am-close">&times;</button>
+                    <p></p>
+              </div>
               <hr>
               <div class="am-u-sm-8 am-u-sm-centered">
                 <button type="button" class="am-btn am-btn-primary am-btn-block">克隆</button>
@@ -111,7 +120,7 @@
 </div>
 
 {{template "Tpl/footer" .}}
-<script src="/js/db/dbTransfer.js"></script>
+<script src="/public/js/db/dbTransfer.js"></script>
 </body>
 </html>
 {{end}}
