--- a/views/db/dbExport.html
+++ b/views/db/dbExport.html
@@ -28,21 +28,17 @@
 
               <hr>
               <div class="am-form-group">
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option1"> 选我
-                </label>
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option2"> 同时可以选我
-                </label>
-                <label class="am-checkbox-inline">
-                  <input type="checkbox" name="collection" value="option3"> 还可以选我
-                </label>
+                {{ range $value := .CollectionNames }} 
+                  <label class="am-checkbox-inline">
+                    <input type="checkbox" name="collection" value="{{ $value }} "> {{ $value }}
+                  </label>
+                {{ end }}
               </div>
           </div>
           <div>
             <strong>
                <span>Download?   &nbsp;&nbsp;&nbsp;<label>
-                  <input type="checkbox"  value="">
+                  <input type="checkbox"  value="" id="isDownload" >
                 </label>
                 </span>
             </strong>
@@ -51,17 +47,29 @@
           <div>
             <strong>
                <span>Compressed:   &nbsp;&nbsp;&nbsp;<label>
-                  <input type="checkbox"  value="">GZIP
+                  <input type="checkbox"  value="" id="isGzip">GZIP
                 </label>
                 </span>
             </strong>
             <hr>
           </div>
           <div>
+              <input type="text" value="{{.DBName}}" id="dbName" style="display: none;">
+          </div>
+          <div>
             <strong><span>Confirm</span></strong>
+            <br>
+               <div class="am-alert a am-alert-warning" id = "msg_alert" style="display: none"  >
+                    <button type="button" class="am-close" >&times;</button>
+                    <p></p>
+                  </div>
+                  <div class="am-alert am-alert-success"  style="display: none" id="msg_success" >
+                    <button type="button"  class="am-close">&times;</button>
+                    <p></p>
+              </div>
             <hr>
-            <div class="am-u-sm-8 am-u-sm-centered">
-              <button type="button" class="am-btn am-btn-primary am-btn-block">导出</button>
+            <div class="am-u-sm-8 am-u-sm-centered" >
+              <button type="button" class="am-btn am-btn-primary am-btn-block" id="export_btn">导出</button>
             </div>
             </div>
         </form>
@@ -74,7 +82,7 @@
 </div>
 
 {{template "Tpl/footer" .}}
-<script src="/js/db/dbExport.js"></script>
+<script src="/public/js/db/dbExport.js"></script>
 </body>
 </html>
 {{end}}
