--- a/views/db/dbImport.html
+++ b/views/db/dbImport.html
@@ -18,10 +18,10 @@
      <div id="database-statistics" class="am-in am-container">
      <br>
 
-        <form class="am-form am-form-horizontal am-container" >
+        <form class="am-form am-form-horizontal am-container" enctype="multipart/form-data" >
             <div>
               <strong>
-                 <span>.JS file exported with RockMongo:</span>
+                 <span>.JS file exported with TinMongo:</span>
               </strong>
 
               <hr>
@@ -35,16 +35,25 @@
           </div>
           <div>
             <strong><span>Confirm</span></strong>
+            <br>
+               <div class="am-alert a am-alert-warning" id = "js_msg_alert" style="display: none"  >
+                    <button type="button" class="am-close" >&times;</button>
+                    <p></p>
+                  </div>
+                  <div class="am-alert am-alert-success"  style="display: none" id="js_msg_success" >
+                    <button type="button"  class="am-close">&times;</button>
+                    <p></p>
+              </div>
             <hr>
             <div class="am-u-sm-8 am-u-sm-centered">
-              <button type="button" class="am-btn am-btn-primary am-btn-block">导入</button>
+              <button type="button" class="am-btn am-btn-primary am-btn-block" id="js_import_btn" >导入</button>
             </div>
             </div>
         </form>
         <br>
         <br>
         <br>
-        <form class="am-form am-form-horizontal am-container" >
+        <form class="am-form am-form-horizontal am-container" enctype="multipart/form-data" >
 
         <div>
           <strong>
@@ -54,7 +63,7 @@
           <div class="am-form-group">
             <span class="am-u-sm-3">Import to collection name:</span>
             <div class="am-u-sm-8 am-u-end" >
-              <input type="text">
+              <input type="text" id="import_collection">
             </div>
           </div>
           <div class="am-form-group am-form-file">
@@ -68,10 +77,22 @@
         </div>
           <div>
             <strong><span>Confirm</span></strong>
+            <br>
+               <div class="am-alert a am-alert-warning" id = "json_msg_alert" style="display: none"  >
+                    <button type="button" class="am-close" >&times;</button>
+                    <p></p>
+                  </div>
+                  <div class="am-alert am-alert-success"  style="display: none" id="json_msg_success" >
+                    <button type="button"  class="am-close">&times;</button>
+                    <p></p>
+              </div>
             <hr>
             <div class="am-u-sm-8 am-u-sm-centered">
-              <button type="button" class="am-btn am-btn-primary am-btn-block">导入</button>
+              <button type="button" class="am-btn am-btn-primary am-btn-block" id="json_import_btn" >导入</button>
             </div>
+            </div>
+            <div style="display: none;">
+              <input type="text" value="{{.DBName}}" id="dbName">
             </div>
         </form>
         <br>
@@ -81,7 +102,7 @@
   <!-- content end -->
   </div>
 </div>
-<script src="/js/db/dbImport.js"></script>
+<script src="/public/js/db/dbImport.js"></script>
 {{template "Tpl/footer" .}}
 </body>
 </html>
