add db operate action

--- a/views/db/dbExport.html
+++ b/views/db/dbExport.html
@@ -69,7 +69,7 @@
               </div>
             <hr>
             <div class="am-u-sm-8 am-u-sm-centered" >
-              <button type="button" class="am-btn am-btn-primary am-btn-block" id="export_btn">导出</button>
+              <button type="button" class="am-btn am-btn-default am-btn-block" id="export_btn">导出</button>
             </div>
             </div>
         </form>
