--- a/views/db/dbImport.html
+++ b/views/db/dbImport.html
@@ -46,7 +46,7 @@
               </div>
             <hr>
             <div class="am-u-sm-8 am-u-sm-centered">
-              <button type="button" class="am-btn am-btn-primary am-btn-block" id="js_import_btn" >导入</button>
+              <button type="button" class="am-btn am-btn-default am-btn-block" id="js_import_btn" >导入</button>
             </div>
             </div>
         </form>
@@ -88,7 +88,7 @@
               </div>
             <hr>
             <div class="am-u-sm-8 am-u-sm-centered">
-              <button type="button" class="am-btn am-btn-primary am-btn-block" id="json_import_btn" >导入</button>
+              <button type="button" class="am-btn am-btn-default am-btn-block" id="json_import_btn" >导入</button>
             </div>
             </div>
             <div style="display: none;">
