--- a/views/db/dbTransfer.html
+++ b/views/db/dbTransfer.html
@@ -106,7 +106,7 @@
               </div>
               <hr>
               <div class="am-u-sm-8 am-u-sm-centered">
-                <button type="button" class="am-btn am-btn-primary am-btn-block">克隆</button>
+                <button type="button" class="am-btn am-btn-default am-btn-block">克隆</button>
               </div>
               </div>
 
