--- a/views/db/dbOperate.html
+++ b/views/db/dbOperate.html
@@ -56,10 +56,11 @@
                       <th></th>
                   </tr>
               </thead>
-              <tbody>
+              <tbody> 
+                {{ $dbName := .DBName}}
                 {{ range $coll := .Collections }}
                   <tr>
-                    <td>{{ $coll}}</td>
+                    <td><a href="/server/collection/home/{{$dbName}}/{{$coll}}">{{ $coll}}</a></td>
                     <td>
                       <a href="#" >
                           <i class="am-icon-trash am-icon-fw"></i>
