--- a/views/collection/home.html
+++ b/views/collection/home.html
@@ -15,14 +15,14 @@
         <div class="am-form">
             <fieldset>
 	              <div class="am-form-group">
-	                  <textarea class="" rows="5" id="doc-ta-1" v-model="item.query" ></textarea>
+	                  <textarea class="" rows="3" id="doc-ta-1" v-model="item.query" ></textarea>
 	              </div>
                   <div class="am-alert a am-alert-warning" id = "msg_alert" v-show="has_msg" style="display: none" >
                     <button type="button" v-on:click="has_msg = false" class="am-close" >&times;</button>
                     <p> ${ alert_msg } </p>
                   </div>
                     <div class="am-form-group">
-                        <button type="button" class="am-btn am-btn-default am-btn-block" v-on:click="execAction" >执行</button>
+                        <button type="button" class="am-btn am-btn-default am-btn-block" v-on:click="execAction" id="exec_btn">执行</button>
                     </div>
                 </fieldset>
           </div>
@@ -31,16 +31,42 @@
           <fieldset>
             <div class="me-result-panel am-panel am-panel-default" v-show="show_result" style="display: none">
                   <div class="me-result-panel am-panel am-panel-default" >
-                    <div class="am-panel-hd">Query: ${ item.query } <br>Result: ${ resultRow }</div>
+                    <div class="am-panel-hd">Query: ${ item.query } <br>Query returned ${ resultRow } documents. </div>
                     <div class="am-panel-bd">
-                      <pre>${ result | json}</code></pre>
+                      <!-- <pre>${ result | json}</code></pre> -->
+                      <row-result
+					    v-for="(row, index) in rows"
+					    v-bind:key="row"
+					    v-bind:title="row"
+					    v-on:remove="collectionRemove(index, row)" >
+                      </row-result>
                     </div>
                   </div>
               </div>
             </fieldset>
-        </div>	
+    </div>	
+ <div class="me-modal am-modal am-modal-confirm" tabindex="-1" id="del-confirm">
+  <div class="am-modal-dialog">
+    <div class="am-modal-hd">删除记录</div>
+    <div class="am-modal-bd">
+     <div style="text-align: left;">
+     	<pre>${ del_row }</pre>
+     </div>
+      你，确定要删除这条记录吗？
+    </div>
+  <!--   <div class="am-alert a am-alert-warning" v-show="del_has_msg" >
+          <button type="button" v-on:click="del_has_msg = false"  class="am-close">&times;</button>
+          <p> ${ del_alert_msg}</p>
+        </div> -->
+    <div class="am-modal-footer">
+      <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+      <span class="am-modal-btn" data-am-modal-confirm>确定</span>
+    </div>
+  </div>
 </div>
 </div>
+</div>
+
 {{template "Tpl/footer" .}}
 <script type="text/javascript" src="/public/js/vue.js"></script>
 <script type="text/javascript" src="/public/js/vue-resource.js"></script>
