--- a/views/collection/insert.html
+++ b/views/collection/insert.html
@@ -21,6 +21,10 @@
                     <button type="button" v-on:click="has_msg = false" class="am-close" >&times;</button>
                     <p> ${ alert_msg } </p>
                   </div>
+                   <div class="am-alert am-alert-success"  style="display: none" v-show="insert_success" >
+                      <button type="button" v-on:click="insert_success = false" class="am-close">&times;</button>
+                    <p>Insert success !!</p>
+                  </div>
                     <div class="am-form-group">
                         <button type="button" class="am-btn am-btn-default am-btn-block" v-on:click="execAction" id="exec_btn">执行</button>
                     </div>
