--- a/views/server/databases.html
+++ b/views/server/databases.html
@@ -26,7 +26,7 @@
               <tbody>
                   {{ range  $db := .DBsStatus }} 
                     <tr>
-                      <td>{{ $db.Name }}</td>
+                      <td><a href="/server/db/home/{{ $db.Name }}">{{ $db.Name }}</a></td>
                       <td>{{ $db.DiskSize | humanize }}</td>
                       <td>{{ $db.StorageSize | humanize  }}</td>
                       <td>{{ $db.DataSize | humanize }}</td>
